feat: added TypeOrmModule

--- a/dotenv/.env.dev
+++ b/dotenv/.env.dev
@@ -4,8 +4,8 @@ NAME=ThingsFlow
 BASE_URL=http://localhost
 
 # DB
-DB_USER_NAME=thingsFlow
-DB_DATABASE=thingsFlow
-DB_PASSWORD=thingsFlow
+DB_USER_NAME=postgres
+DB_DATABASE=postgres
+DB_PASSWORD=postgres
 DB_PORT=5432
 DB_HOST=db
