--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "ts-jenum": "^2.2.2",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0"
   },
