feat: setUp liblary for authentication with session

--- a/dotenv/.env.dev
+++ b/dotenv/.env.dev
@@ -9,3 +9,9 @@ DB_DATABASE=postgres
 DB_PASSWORD=postgres
 DB_PORT=5432
 DB_HOST=db
+
+
+# SESSION
+SESSION_EXPIRE=86400000
+COOKIE_SECRET=ASJKFADSF
+CON_STRING=postgres://postgres:postgres@localhost:5432/postgres
