--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.1",
+    "cls-hooked": "^4.2.2",
     "connect-pg-simple": "^9.0.1",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
@@ -40,6 +42,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/cls-hooked": "^4.3.8",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
