--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "connect-pg-simple": "^9.0.1",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.18.0",
+    "ioredis": "^5.3.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
