feat: added dockerfile, docker-compose.yml for dev enviroment

--- a/dotenv/.env.dev
+++ b/dotenv/.env.dev
@@ -4,9 +4,9 @@ NAME=ThingsFlow
 BASE_URL=http://localhost
 
 # DB
-DB_USER_NAME=postgres
-DB_DATABASE=postgres
-DB_PASSWORD=postgres
+DB_USER_NAME=test
+DB_DATABASE=test
+DB_PASSWORD=test
 DB_PORT=5432
 DB_HOST=db
 
