--- a/dotenv/.env.dev
+++ b/dotenv/.env.dev
@@ -4,9 +4,9 @@ NAME=ThingsFlow
 BASE_URL=http://localhost
 
 # DB
-DB_USER_NAME=test
-DB_DATABASE=test
-DB_PASSWORD=test
+DB_USER_NAME=postgres
+DB_DATABASE=postgres
+DB_PASSWORD=postgres
 DB_PORT=5432
 DB_HOST=db
 
@@ -14,4 +14,4 @@ DB_HOST=db
 # SESSION
 SESSION_EXPIRE=86400000
 COOKIE_SECRET=ASJKFADSF
-CON_STRING=postgres://postgres:postgres@localhost:5432/postgres
+CON_STRING=postgres://postgres:postgres@db:5432/postgres
